crates/daow/tests/compile_fail/param_mismatch.stderr
error: parameter count mismatch in method 'get_by_id': SQL has 2 placeholders but method has 1 parameters
  --> tests/compile_fail/param_mismatch.rs:24:1
   |
24 | #[dao]
   | ^^^^^^
   |
   = note: this error originates in the attribute macro `dao` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `Pool`, `Result`, and `async_trait`
  --> tests/compile_fail/param_mismatch.rs:17:12
   |
17 | use daow::{async_trait, dao, Entity, Pool, Result};
   |            ^^^^^^^^^^^               ^^^^  ^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
